server not checking locations correctly

--- a/map-app/index.html
+++ b/map-app/index.html
@@ -58,8 +58,8 @@
 
         <div id="images"></div>
 
-            <button class="green wide" onclick="app.ledOn()">Light ON</button>
-            <button class="red wide" onclick="app.ledOff()">Light OFF</button>
+            <button class="green wide" onclick="app.ledOn()">Lock</button>
+            <button class="red wide" onclick="app.ledOff()">Unlock</button>
             <!-- <button class="yellow wide" id="disconnectButton" onclick="app.disconnect()">Disconnect</button> -->
             
         </div>
