added debugging msges

--- a/map-app/index.html
+++ b/map-app/index.html
@@ -68,7 +68,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/underscore-min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsbDZ3lAcNuR5wKp3xSaDa_UIbvyqdyKo&signed_in=true" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsbDZ3lAcNuR5wKp3xSaDa_UIbvyqdyKo" async defer></script>
         <script type="text/javascript">
             app.initialize();
             app.ledOn = function(){
