--- a/map-app/index.html
+++ b/map-app/index.html
@@ -6,6 +6,7 @@
         initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
         <title>Wallock</title>
         <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
+
         <style>
         @import 'ui/css/evothings-app.css';
         
@@ -23,11 +24,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width;" />
         -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
-        <title>Light Control</title>
+        <title>Wallock</title>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<!--         <script src="js/jquery-1.9.1.min.js"></script> -->
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
     </head>
+    
     <body ontouchstart=""><!-- ontouchstart="" enables low-delay CSS transitions. -->
     <header>
         <span>Wallock</span>
