--- a/map-app/index.html
+++ b/map-app/index.html
@@ -5,20 +5,34 @@
     <title>Wallock - </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="/vendor/jquerymobile/jquery.mobile.min.css" />
-    <link rel="stylesheet" href="/vendor/waves/waves.min.css" />
-    <link rel="stylesheet" href="/vendor/wow/animate.css" />
-    <link rel="stylesheet" href="/css/nativedroid2.css" />
-    <link rel="stylesheet" href="/css/nativedroid2.color.light-green.css" />
-    <link rel="stylesheet" href="/css/custom.css" />
+    <link rel="stylesheet" href="vendor/jquerymobile/jquery.mobile.min.css" />
+    <link rel="stylesheet" href="vendor/waves/waves.min.css" />
+    <link rel="stylesheet" href="vendor/wow/animate.css" />
+    <link rel="stylesheet" href="css/nativedroid2.css" />
+    <link rel="stylesheet" href="css/nativedroid2.color.light-green.css" />
+    <link rel="stylesheet" href="css/custom.css" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+    <style>
+    /*@import 'ui/css/evothings-app.css';*/
+    
+    #map {
+        height: 300px;
+        width: 100%;
+    }
+    </style>
+    <script>
+    console.log = hyper.log
+    </script>
 </head>
 
-<body>
+<body ontouchstart="">
     <div data-role="page">
-        <nd2-include data-src="/examples/fragments/panel.left.mod.html"></nd2-include>
+        <nd2-include data-src="examples/fragments/panel.left.mod.html"></nd2-include>
         <div data-role="panel" id="bottomsheet" data-animate="false" data-position='bottom' data-display="overlay">
             <nd2-include data-src="/examples/fragments/bottom.sheet.html"></nd2-include>
         </div>
@@ -27,58 +41,70 @@
             <h1 class="wow fadeIn" data-wow-delay='0.4s'>Wallock</h1>
         </div>
         <div role="main" class="ui-content" data-inset="false">
-            <p class="subtitle">Hi Kaye, your wallet is</p>
-            <h1 class="status clr-bg-light-green"><i class='zmdi zmdi-lock-open zmdi-hc-4x'></i> UNLOCKED</h1>
-            <hr />
-            <h4 class="subtitle">
-				Go you! This week you avoided spending...
-				</h4>
-            <ul data-role="listview" data-icon="false">
-                <li>
-                    <a href="#">
-                        <img src="/img/1.jpg" class="ui-thumbnail ui-thumbnail-circular" />
-                        <h2 class="no-bot-margin">Union Burrito</h2>
-                        <p class="descr"><i class='zmdi zmdi-pin'></i> 123 Trafalgar Road, Oakville, Ontario
-                        </p>
-                        <div class="saved">
-                            $50
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="/img/2.jpg" class="ui-thumbnail ui-thumbnail-circular" />
-                        <h2 class="no-bot-margin">Sally's Shoes</h2>
-                        <p class="descr"><i class='zmdi zmdi-pin'></i> 421 Lakeshore Road West, Okaville, Ontario
-                        </p>
-                        <div class="saved">
-                            $42
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="/img/3.jpg" class="ui-thumbnail ui-thumbnail-circular" />
-                        <h2 class="no-bot-margin">EB Games</h2>
-                        <p class="descr"><i class='zmdi zmdi-pin'></i> 63 Margaret Ave, Missisauge, Ontario
-                        </p>
-                        <div class="saved">
-                            $30
-                        </div>
-                    </a>
-                </li>
-            </ul>
-            <a href="#locked" class="ui-btn">locked page</a>
+            <div id="connectionScreen">
+                <h2>Connect to bluetooth</h2>
+                <div id="messageDiv" style="font-size:75%"></div>
+                <ul id="deviceList" class="topcoat-list">
+                </ul>
+                <div style="margin: 10px">
+                    <button class="topcoat-button" id="refreshButton">Find bluetooth devices</button>
+                </div>
+            </div>
+            <div id="colorScreen">
+                <p class="subtitle">Hi Kaye, your wallet is</p>
+                <h1 class="status clr-bg-light-green"><i class='zmdi zmdi-lock-open zmdi-hc-4x'></i> UNLOCKED</h1>
+                <hr />
+                <h4 class="subtitle">
+                Go you! This week you avoided spending...
+                </h4>
+                <ul data-role="listview" data-icon="false">
+                    <li>
+                        <a href="#">
+                            <img src="img/1.jpg" class="ui-thumbnail ui-thumbnail-circular" />
+                            <h2 class="no-bot-margin">Union Burrito</h2>
+                            <p class="descr"><i class='zmdi zmdi-pin'></i> 123 Trafalgar Road, Oakville, Ontario
+                            </p>
+                            <div class="saved">
+                                $50
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/2.jpg" class="ui-thumbnail ui-thumbnail-circular" />
+                            <h2 class="no-bot-margin">Sally's Shoes</h2>
+                            <p class="descr"><i class='zmdi zmdi-pin'></i> 421 Lakeshore Road West, Okaville, Ontario
+                            </p>
+                            <div class="saved">
+                                $42
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="img/3.jpg" class="ui-thumbnail ui-thumbnail-circular" />
+                            <h2 class="no-bot-margin">EB Games</h2>
+                            <p class="descr"><i class='zmdi zmdi-pin'></i> 63 Margaret Ave, Missisauge, Ontario
+                            </p>
+                            <div class="saved">
+                                $30
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <a href="#locked" class="ui-btn">locked page</a>
+            </div>
+            <a href="#addLoc" data-transition="pop" class="ui-btn
+                ui-btn-inline
+                ui-btn-fab
+                ui-btn-fab-bottom
+                ui-btn-raised
+                clr-primary">
+                <i class='zmdi zmdi-pin zmd-2x'></i>
+            </a>
         </div>
-        <a href="#popupDialog" data-transition="pop" class="ui-btn
-				ui-btn-inline
-				ui-btn-fab
-				ui-btn-fab-bottom
-				ui-btn-raised
-				clr-primary">
-            <i class='zmdi zmdi-pin zmd-2x'></i>
-        </a>
     </div>
+    <!-- Locked page -->
     <div data-role="page" id="locked">
         <div data-role="header" data-position="fixed" class="wow fadeInDown" data-wow-delay="0.2s">
             <h1 class="wow fadeIn" data-wow-delay='0.4s'>Wallock</h1>
@@ -86,14 +112,13 @@
         <div role="main" class="ui-content" data-inset="false">
             <p class="subtitle">Hi Kaye, your wallet is</p>
             <h1 class="status clr-bg-red"><i class='zmdi zmdi-lock zmdi-hc-4x'></i> LOCKED</h1>
-
             <h4 class="subtitle">
-				Since you're near a location where you usually spend...
-				</h4>
+                Since you're near a location where you usually spend...
+                </h4>
             <ul data-role="listview" data-icon="false">
                 <li>
                     <a href="#">
-                        <img src="/img/1.jpg" class="ui-thumbnail ui-thumbnail-circular" />
+                        <img src="img/1.jpg" class="ui-thumbnail ui-thumbnail-circular" />
                         <h2 class="no-bot-margin">Union Burrito</h2>
                         <p class="descr"><i class='zmdi zmdi-pin'></i> 123 Trafalgar Road, Oakville, Ontario
                         </p>
@@ -103,37 +128,41 @@
                     </a>
                 </li>
             </ul>
-
             <h4 class="subtitle">
-				Don't forget! You said your goal was to...
-				</h4>
+                Don't forget! You said your goal was to...
+                </h4>
             <ul data-role="listview" data-icon="false">
                 <li>
                     <a href="#">
-                        <img src="/img/4.jpg" class="ui-thumbnail ui-thumbnail-circular" />
+                        <img src="img/4.jpg" class="ui-thumbnail ui-thumbnail-circular" />
                         <h2 class="no-bot-margin">Save money</h2>
                         <p>Go on Spring Break trip with friends
                         </p>
-                        
                     </a>
                 </li>
             </ul>
-			<hr>
-			 <h4><i class='zmdi zmdi-lock-open loc-icon'></i>UNLOCKING METHOD</h4>
-			 <p>If you really really need to use your wallet...</p>
-			 <a href="#" class="ui-btn ui-btn-raised">Call a buddy</a>
-
+            <hr>
+            <h4><i class='zmdi zmdi-lock-open loc-icon'></i>UNLOCKING METHOD</h4>
+            <p>If you really really need to use your wallet...</p>
+            <a href="#" class="ui-btn ui-btn-raised">Call a buddy</a>
         </div>
     </div>
     <!-- add locations page -->
-    <div data-role="page" id="popupDialog">
+    <div data-role="page" id="addLoc">
         <div data-role="header" data-position="fixed" class="wow fadeIn">
             <a href="#" class="ui-btn ui-btn-primary ui-btn-right wow fadeIn" data-wow-delay='1.2s' style="width: auto;">Save</a>
             <a href="#" class="ui-btn ui-btn-left wow fadeIn" data-rel="back" data-direction="reverse" data-wow-delay='0.8s'><i class="zmdi zmdi-close"></i></a>
             <h1 class="wow fadeIn" data-wow-delay='0.4s'>Add Danger Location</h1>
         </div>
-        <div data-role="content">
-            <p>map here</p>
+        <div role="main" class="ui-content">
+            <div id="map"></div>
+            <div id="LocNameForm">
+                <input type="text" id="locName" placeholder="location name" />
+                <button class="green" onclick="app.saveLocation()">Save</button>
+            </div>
+            <button class="green wide" onclick="app.ledOn()">Lock</button>
+            <button class="red wide" onclick="app.ledOff()">Unlock</button>
+
             <hr />
             <input type="text" name="locNam" id="locNam" value="" data-clear-btn="true" placeholder="Location name">
             <a href="#goal" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-raised waves-effect waves-button waves-effect waves-button">Select a goal <i class='lIcon fa fa-chevron-right'></i></a>
@@ -191,12 +220,32 @@
         </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="/vendor/jquerymobile/jquery-ui.min.js"></script>
+    <script src="vendor/jquerymobile/jquery-ui.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-    <script src="/vendor/waves/waves.min.js"></script>
-    <script src="/vendor/wow/wow.min.js"></script>
-    <script src="/js/nativedroid2.js"></script>
-    <script src="/nd2settings.js"></script>
+    <!-- evo -->
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/underscore-min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsbDZ3lAcNuR5wKp3xSaDa_UIbvyqdyKo" async defer></script>
+    <!-- jquery mobile -->
+    <script src="vendor/waves/waves.min.js"></script>
+    <script src="vendor/wow/wow.min.js"></script>
+    <script src="js/nativedroid2.js"></script>
+    <script src="nd2settings.js"></script>
+    <script type="text/javascript">
+    app.initialize();
+    app.ledOn = function() {
+        bluetoothSerial.write("a");
+    }
+    app.ledOff = function() {
+        bluetoothSerial.write("b");
+    }
+
+    $("#addLoc").on('pageinit', function() {
+        loadDataFromServer();
+
+    });
+    </script>
 </body>
 
 </html>
